data/derived/fa15/progs/unify/prog1971.ml.out
Characters 122-124:
  | Sine x1              -> sin(pi*eval(x1,x,y))
                                ^^
Error: This expression has type float but an expression was expected of type
         int
